# iGetMusic

./: LICENSE  README.md  artist.json  setup.cfg  template.json  testing.py
Website/: index.html  style.css
iGetMusic/: LICENCE  __init__.py  iGet.py  pyproject.toml
iGetMusic.egg-info/: PKG-INFO
iGetMusic/iGetMusic.egg-info/: SOURCES.txt  top_level.txt
