[metadata]
name = iGetMusic
version = 0.0.5
author = Waradu
author_email = einfach_noan@outlook.de
description = Search for music with the iTunes API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Waradu/iGetMusic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = False